GNOME Bugzilla – Bug 736750
vc1parse: fix sequence-layer/frame-layer endianness
Last modified: 2014-09-19 08:38:46 UTC
Sequence-layer and frame-layer are serialized in little-endian byte order. But currently when we parse them, we read in big-endian byte order.
Created attachment 286298 [details] [review] vc1parse: fix sequence-layer/frame-layer endianness Sequence-layer and frame-layer are serialized in little-endian byte order except for STRUCT_C and framedata fields as described in SMPTE 421M Annex L.
commit d2847eaa097dd9e144fcc755bfacac73480aaa85 Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Tue Sep 16 15:59:58 2014 +0200 vc1parse: fix sequence-layer/frame-layer endianness Sequence-layer and frame-layer are serialized in little-endian byte order except for STRUCT_C and framedata fields as described in SMPTE 421M Annex L. https://bugzilla.gnome.org/show_bug.cgi?id=736750
Maybe, this fix should be applied to 1.4 branch.